[tool.poetry]
name = "dummy-excel-generator"
version = "0.1.0"
description = "Generate Dummy excel file with fake data"
authors = ["opabravo <21262207+opabravo@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
faker = "^17.6.0"
click = "^8.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
